[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scenes/UI/Fullscreen.gd" type="Script" id=1]
[ext_resource path="res://Sprites/UI/Buttons/close_button_up.png" type="Texture" id=2]
[ext_resource path="res://Sprites/UI/Buttons/close_button_down.png" type="Texture" id=3]
[ext_resource path="res://Sprites/UI/Buttons/fullscreen_button_down.png" type="Texture" id=4]
[ext_resource path="res://Sprites/UI/Buttons/close_button.png" type="Texture" id=5]
[ext_resource path="res://Sprites/UI/Buttons/fullscreen_button.png" type="Texture" id=6]
[ext_resource path="res://Sprites/UI/Buttons/fullscreen_button_up.png" type="Texture" id=7]
[ext_resource path="res://Scenes/UI/Settings.gd" type="Script" id=8]
[ext_resource path="res://Scenes/Game/Enviroment/Background.tscn" type="PackedScene" id=9]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;


uniform vec4 c1 : hint_color;
uniform vec4 c2 : hint_color;

uniform sampler2D pn1;
uniform sampler2D pn2;
uniform vec2 world_pos;
uniform vec2 scaling = vec2(1,1);
uniform vec2 world_scaling = vec2(1,1);

void fragment()
{
	vec3 color;
	float n1 = texture(pn1, scaling * (UV.xy + world_pos/world_scaling)).r;
	float n2 = texture(pn2, scaling * (UV.xy + world_pos/world_scaling)).r;
	n1 = smoothstep( 0.13, 1.0, (n1 + n2)/2.0);
	//color = vec3(n1);
	color = c1.rgb * n1 + c2.rgb * n2;
	
	COLOR = vec4(color, n1);
}"

[sub_resource type="OpenSimplexNoise" id=2]

[sub_resource type="NoiseTexture" id=3]
seamless = true
noise = SubResource( 2 )

[sub_resource type="OpenSimplexNoise" id=4]
seed = 1
period = 138.0
persistence = 0.229
lacunarity = 3.03

[sub_resource type="NoiseTexture" id=5]
seamless = true
noise = SubResource( 4 )

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 1 )
shader_param/c1 = Color( 0.894118, 0.0470588, 0.0470588, 1 )
shader_param/c2 = Color( 0.207843, 0.215686, 0.686275, 1 )
shader_param/world_pos = Vector2( 363.663, 329.949 )
shader_param/scaling = Vector2( 1, 1 )
shader_param/world_scaling = Vector2( 100, 100 )
shader_param/pn1 = SubResource( 3 )
shader_param/pn2 = SubResource( 5 )

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.47451, 0.47451, 0.47451, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -58.0
margin_top = -27.5
margin_right = 58.0
margin_bottom = 27.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/VBoxContainer"]
margin_right = 116.0
margin_bottom = 34.0

[node name="Label" type="Label" parent="ColorRect/VBoxContainer/VBoxContainer"]
margin_right = 116.0
margin_bottom = 14.0
text = "Master"

[node name="Master" type="HSlider" parent="ColorRect/VBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 116.0
margin_bottom = 34.0
min_value = -50.0
max_value = 0.0

[node name="VBoxContainer2" type="VBoxContainer" parent="ColorRect/VBoxContainer"]
margin_top = 38.0
margin_right = 116.0
margin_bottom = 72.0

[node name="Label" type="Label" parent="ColorRect/VBoxContainer/VBoxContainer2"]
margin_right = 116.0
margin_bottom = 14.0
text = "SoundFX"

[node name="SoundFX" type="HSlider" parent="ColorRect/VBoxContainer/VBoxContainer2"]
margin_top = 18.0
margin_right = 116.0
margin_bottom = 34.0
min_value = -50.0
max_value = 0.0

[node name="VBoxContainer3" type="VBoxContainer" parent="ColorRect/VBoxContainer"]
margin_top = 76.0
margin_right = 116.0
margin_bottom = 110.0

[node name="Label" type="Label" parent="ColorRect/VBoxContainer/VBoxContainer3"]
margin_right = 116.0
margin_bottom = 14.0
text = "Music"

[node name="Music" type="HSlider" parent="ColorRect/VBoxContainer/VBoxContainer3"]
margin_top = 18.0
margin_right = 116.0
margin_bottom = 34.0
min_value = -50.0
max_value = 0.0

[node name="Fullscreen" type="TextureButton" parent="ColorRect/VBoxContainer"]
margin_top = 114.0
margin_right = 116.0
margin_bottom = 169.0
toggle_mode = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 7 )
script = ExtResource( 1 )

[node name="Close" type="TextureButton" parent="ColorRect/VBoxContainer"]
margin_top = 173.0
margin_right = 116.0
margin_bottom = 228.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 2 )

[node name="Background" parent="." instance=ExtResource( 9 )]
material = SubResource( 6 )
position = Vector2( 363.663, 329.949 )
scale = Vector2( 13.1194, 23.0892 )
[connection signal="value_changed" from="ColorRect/VBoxContainer/VBoxContainer/Master" to="." method="_on_Master_value_changed"]
[connection signal="value_changed" from="ColorRect/VBoxContainer/VBoxContainer2/SoundFX" to="." method="_on_SoundFX_value_changed"]
[connection signal="value_changed" from="ColorRect/VBoxContainer/VBoxContainer3/Music" to="." method="_on_Music_value_changed"]
[connection signal="gui_input" from="ColorRect/VBoxContainer/Fullscreen" to="ColorRect/VBoxContainer/Fullscreen" method="_on_Fullscreen_gui_input"]
[connection signal="button_up" from="ColorRect/VBoxContainer/Close" to="ColorRect/VBoxContainer/Fullscreen" method="_on_Close_button_up"]
